--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 ./build
 ./dist
+backend.log
+api.spec
+Ecalyptus Printer.spec
+EcalyptusPrinterInstaller.exe
+identifier.sqlite
+main.spec
+test_main.http
+./api/**/__pycache__/**
+./view/**/__pycache__/**
+./api/repo/**/__pycache__/**
+./api/services/**/__pycache__/**
+./api/utils/**/__pycache__/
